// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transition basic 1`] = `
<CSSTransitionGroup
  aria-label={null}
  className={null}
  component="div"
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={210}
  transitionLeave={true}
  transitionLeaveTimeout={210}
  transitionName="c-transition-push"
/>
`;

exports[`Transition label 1`] = `
<CSSTransitionGroup
  aria-label="Page explorer"
  className={null}
  component="div"
  transitionAppear={false}
  transitionEnter={true}
  transitionEnterTimeout={210}
  transitionLeave={true}
  transitionLeaveTimeout={210}
  transitionName="c-transition-push"
/>
`;
